Bug 155076 - Mouse pointer does not change to bar when moving over text area in a comment (GTK)
Summary: Mouse pointer does not change to bar when moving over text area in a comment ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0 alpha1+
Hardware: All Linux (All)
: low trivial
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.4
Keywords: bibisected, bisected, regression
Depends on:
Blocks: GTK3 Writer-Comments Mouse-Cursor
  Show dependency treegraph
 
Reported: 2023-04-29 09:53 UTC by Eyal Rozenberg
Modified: 2023-05-05 08:52 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Document for reproducing the bug (66.71 KB, application/vnd.oasis.opendocument.text)
2023-04-29 09:53 UTC, Eyal Rozenberg
Details
Screenshot of mouse pointer over the comment (157.91 KB, image/png)
2023-04-29 09:55 UTC, Eyal Rozenberg
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Eyal Rozenberg 2023-04-29 09:53:34 UTC
Created attachment 187003 [details]
Document for reproducing the bug

When the mouse pointer is over a document's text area, it looks like an 'I' bar. When moving outside of it, e.g. outside the page, it changes into an arrow.

Now, when moving it into a comment box and over the comment text, I expect it to look like an I-bar again - but it remains an arrow. Even clicking on some point within the text doesn't change it (!)
Comment 1 Eyal Rozenberg 2023-04-29 09:55:42 UTC
Created attachment 187004 [details]
Screenshot of mouse pointer over the comment
Comment 2 Eyal Rozenberg 2023-04-29 09:56:01 UTC
Build::

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5cd9de202765e243e41416802f3e4486b8a96f16
CPU threads: 4; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: he-IL (en_IL); UI: en-US
Comment 3 V Stuart Foote 2023-04-29 12:49:01 UTC
Can not confirm on Windows builds.

The mouse pointer toggles to the "Text select" pointer when passing over the comment's textual area (holding an edit cursor). It reverts to the "Normal select" pointer over the comment's lb button and author.


Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2eb3922750b385dcadfd124d7baf686cec40eb5e
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: threaded
Comment 4 Stéphane Guillou (stragu) 2023-05-02 14:58:44 UTC
Confirmed in recent master build:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: fb3a6b82b55a298eabf8f431f1451dc826642acd
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

gen and kf5 VCLs not affected.

Bibisected with linux-64-7.2 repo to first bad commit cc7d3176a3ab4a651a17f972fa65cd7aec4bb675 which points to core commit:

commit c2c5b1f7558004aa0d3541b7c4ffadc5d6bad331
author	Caolán McNamara <caolanm@redhat.com>	Tue Apr 06 17:28:59 2021 +0100
committer	Caolán McNamara <caolanm@redhat.com>	Tue Apr 06 21:46:05 2021 +0200
remove Application::GetDefDialogParent call in editeng
and pass in an explicit parent to use
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/113695

Caolán, can you please have a look?
Comment 5 Caolán McNamara 2023-05-04 10:35:59 UTC
The cursor does seem to change in the insert header/footer dialog of calc for a somewhat similar editengine case, need to have a look at what is different for the hosted-in-document case.
Comment 6 Commit Notification 2023-05-04 15:09:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6990fd3e4199c71fd1490b895ff30ef18d387e52

Resolves: tdf#155076 set annotation cursor to Text on mouse enter

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2023-05-04 15:10:21 UTC
done in trunk, backport to 7-5 in gerrit
Comment 8 BogdanB 2023-05-05 05:06:43 UTC
Thanks for fixing this.

Good in
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 5e7327e9313e2d9fe2f0defb30d3e7dc28c0b2ce
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded

Bad in
Version: 7.5.2.1 (X86_64) / LibreOffice Community
Build ID: e8bf3b441b8370f8440b0339fd9490765a8d57ca
CPU threads: 16; OS: Linux 5.19; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 9 Commit Notification 2023-05-05 08:52:07 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/9d01cf26715b1274fbe5f94f87a8ab8bcd90a85a

Resolves: tdf#155076 set annotation cursor to Text on mouse enter

It will be available in 7.5.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.