Resolves: tdf#155076 set annotation cursor to Text on mouse enter

Change-Id: Ib3b1f90dd055ddd3b343f83d3118f090ea449b71
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151372
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>